--- a/4-0212hour/index.html
+++ b/4-0212hour/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
-    <title>4-01_input</title>
+    <title>4-02_input</title>
     <link href="../../_common/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -17,10 +17,38 @@
       <!-- /.header-contents -->
     </header>
     <div class="main-wrapper">
-      <section></section>
+      <section>
+        <p>最終アクセス時間:<span id="time"></span></p>
+      </section>
     </div>
     <!-- /.main-wrapper -->
     <footer>JavaScript Samples</footer>
-    <script></script>
+    <script>
+      var now = new Date();
+      var year = now.getFullYear();
+      var month = now.getMonth();
+      var date = now.getDate();
+      var hour = now.getHours();
+      var min = now.getMinutes();
+      var ampm = "";
+      if (hour < 12) {
+        ampm = "a.m.";
+      } else {
+        ampm = "p.m.";
+      }
+
+      var output =
+        year +
+        "/" +
+        (month + 1) +
+        "/" +
+        date +
+        "/" +
+        (hour % 12) +
+        ":" +
+        min +
+        ampm;
+      document.getElementById("time").textContent = output;
+    </script>
   </body>
 </html>
