小数点の切り捨て

--- a/sample.html
+++ b/sample.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
-    <title>4-01_input</title>
+    <title>4-01</title>
     <link href="../../_common/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header>
       <div class="header-contents">
-        <h1>============</h1>
-        <h2>============</h2>
+        <h1></h1>
+        <h2></h2>
       </div>
       <!-- /.header-contents -->
     </header>
